# workshop_fastapi

./: README.md  exemplo01_geranumero.py  exemplo_00.py  exemplo_03.py  exemplo_04.py  numeros.txt  pyproject.toml
ml/: api_prediction.py  modelo.py  modelo_casas.pkl  prediction_func.py  requirements.txt
